src/main/java/com/example/currencyexchange/model/errors/CurrencyNotFoundException.java
package com.example.currencyexchange.model.errors;

public class CurrencyNotFoundException extends RuntimeException{
    public CurrencyNotFoundException(String message) {
        super(message);
    }
}
